cmake_minimum_required(VERSION 3.17)
project(c_learning C)

set(CMAKE_C_STANDARD 99)

add_executable(ex_1_1 ex_1/递增有序顺序表的插入.c)
add_executable(ex_1_2 ex_1/两个有序链表序列的交集.c)
add_executable(ex_1_3 ex_1/简单计算器.c)
add_executable(ex_1_4 ex_1/递增有序顺序表的插入.c)

add_executable(ex_2_1 ex_2/二叉树的遍历.c)
add_executable(ex_2_2 ex_2/是否同一棵二叉搜索树.c)
add_executable(ex_2_3 ex_2/堆中的路径.c)

add_executable(ex_3_1 ex_3/拯救007.c)
add_executable(ex_3_2 ex_3/哈利波特的考试.c)

add_executable(ex_4_1 ex_4/有序数组的插入.c)
add_executable(ex_4_2 ex_4/英文单词排序.c)
add_executable(ex_4_3 ex_4/寻找大富翁.c)
